Implementação do endpoint de buscar transações de uma chave Origem