@@ -1,6 +1,7 @@
 package com.pix.infra.gateways.repository;
 
 import com.pix.application.gateways.TransacaoRepository;
+import com.pix.domain.chave.ChavePix;
 import com.pix.domain.transacao.Transacao;
 import com.pix.infra.gateways.repository.mapper.TransacaoMapper;
 import com.pix.infra.persistence.chave.ChavePixEntity;
@@ -10,11 +11,16 @@ import com.pix.infra.persistence.transacao.TransacaoJpaRepository;
 import jakarta.persistence.EntityExistsException;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class TransacaoServiceRepository implements TransacaoRepository {
@@ -47,8 +53,15 @@ public class TransacaoServiceRepository implements TransacaoRepository {
     }
 
     @Override
-    public Set<Transacao> buscarTodas() throws EntityNotFoundException {
-        return Set.of();
+    public Set<Transacao> buscarChaveOrigem(String chaveOrigem, Pageable paginacao) throws EntityNotFoundException {
+        ChavePixEntity chavePixEntity = buscarChavePix(chaveOrigem);
+        Page<TransacaoEntity> transacoesPage = transacaoJpaRepository.findAllByChavePixOrigem(chavePixEntity, paginacao);
+        if (transacoesPage == null) {
+            return Collections.emptySet();
+        }
+        return transacoesPage.stream()
+                .map(transacao -> transacaoMapper.toDomain(transacao))
+                .collect(Collectors.toSet());
     }
 
     private ChavePixEntity buscarChavePix(String chave) {
